--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
 		
 		    <!-- Left Nav Section -->
 		    <ul class="left">
-		      <li><a href="#">Left Nav Button</a></li>
+		      <li><a class="susuwatari" href="{{ site.baseurl }}"></a></li>
 		    </ul>
 		  </section>
 		</nav>
