style single and category pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,23 +4,23 @@
 	  
 	<div class="footer-social">
 
-	    <a target="_blank" title="Facebook" href="#">
+	    <a target="_blank" title="Facebook" href="https://www.facebook.com/claudiu.creanga.9">
 	        <i class="fa fa-facebook"></i>
 	    </a>
 	    
-	    <a target="_blank" title="Twitter" href="#">
+	    <a target="_blank" title="Twitter" href="https://twitter.com/claudiucreanga">
 	        <i class="fa fa-twitter"></i>
 	    </a>
 	    
-	    <a target="_blank" title="LinkedIn+" href="#">
+	    <a target="_blank" title="LinkedIn+" href="https://uk.linkedin.com/in/claudiucreanga">
 		    <i class="fa fa-linkedin"></i>
 		</a>
 		
-	    <a target="_blank" title="StackOverflow" href="#">
+	    <a target="_blank" title="StackOverflow" href="http://stackoverflow.com/users/3711219/claudiu">
 		    <i class="fa fa-stack"></i>
 		</a>
 		
-	    <a target="_blank" title="Github" href="#">
+	    <a target="_blank" title="Github" href="https://github.com/ClaudiuCreanga/">
 		    <i class="fa fa-github-alt"></i>
 		</a>
     
