--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,19 @@
-<header class="site-header">
+<header class="site-header sticky">
 
   <div class="wrapper">
     
-    <div class="contain-to-grid sticky ">
+    <div class="contain-to-grid sticky">
 
 	    <nav class="top-bar" data-topbar role="navigation">
 		  		
 		  <section class="top-bar-section">
 		    <!-- Right Nav Section -->
 		    <ul class="right">
-		      <li class="active"><a href="#">Blog</a></li>
-		      <li class=""><a href="#">About</a></li>
-		      <li class=""><a href="#">Projects</a></li>
-		      <li class=""><a href="#">Stuff</a></li>
-		      <li class=""><a href="#">Contact</a></li>
+		      <li class="active blog"><a href="{{ site.baseurl }}/index.html">Blog</a></li>
+		      <li class="about-me"><a class="call-block" href="javascript:void(0)">About</a></li>
+		      <li class="projects"><a class="call-block" href="javascript:void(0)">Projects</a></li>
+		      <li class="stuff"><a href="{{ site.baseurl }}/stuff.html">Stuff</a></li>
+		      <li class="contact"><a class="call-block" href="javascript:void(0)">Contact</a></li>
 		    </ul>
 		
 		    <!-- Left Nav Section -->
