--- a/foundation/scss/_components.scss
+++ b/foundation/scss/_components.scss
@@ -2,6 +2,9 @@
 @import 
 	"components/mixins",
 	"components/base",
+	"components/type",
 	"components/menu",
+	"components/top-blocks",
+	"components/blog",
 	"components/footer",
     "components/single";
