--- a/foundation/scss/components/_menu.scss
+++ b/foundation/scss/components/_menu.scss
@@ -1,5 +1,6 @@
 .site-header{
-	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+	box-shadow: 0px 1px 1px $black;
+	height: rem-calc(75);
 }
 .top-bar{
 	letter-spacing: rem-calc(1);
