--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="{{ relative }}assets/scripts/foundation.min.js"></script>
-  <script src="{{ relative }}assets/scripts/foundation.offcanvas.js"></script>
-  <script src="{{ relative }}assets/scripts/foundation.topbar.js"></script>
-  <script src="{{ relative }}assets/scripts/main.js"></script>
+  <script src="{{ "/assets/scripts/foundation.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/assets/scripts/foundation.offcanvas.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/assets/scripts/foundation.topbar.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/assets/scripts/main.js" | prepend: site.baseurl }}"></script>
 </head>
