--- a/foundation/scss/_settings.scss
+++ b/foundation/scss/_settings.scss
@@ -221,8 +221,8 @@ $base-font-family: "ralewaylight", Georgia, Arial;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
-// $h1-font-size: rem-calc(44);
-// $h2-font-size: rem-calc(37);
+$h1-font-size: rem-calc(20);
+$h2-font-size: rem-calc(16);
 // $h3-font-size: rem-calc(27);
 // $h4-font-size: rem-calc(23);
 // $h5-font-size: rem-calc(18);
