--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,8 @@
   <div class="wrapper">
 	  
 	<div class="footer-social">
+		
+		<div class="totoro"></div>
 
 	    <a target="_blank" title="Facebook" href="https://www.facebook.com/claudiu.creanga.9">
 	        <i class="fa fa-facebook"></i>
